--- a/src/assets/scss/elements/_modal.scss
+++ b/src/assets/scss/elements/_modal.scss
@@ -1,15 +1,27 @@
 .modal {
     position: fixed;
-    background-color: rgb(0 0 0 / 80%);
+    background-color: rgb(25 25 25 / 80%);
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 9999;
+    z-index: 999999;
     visibility: visible;
     opacity: 1;
     pointer-events: auto;
     transition: all 0.3s;
+
+    &::before {
+        -webkit-backdrop-filter: blur(7.5px);
+        backdrop-filter: blur(2.5px);
+        background: var(--front-page-background);
+        content: "";
+        height: 100%;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: 100%;
+    }
 
     &__content {
         width: 400px;
@@ -18,13 +30,29 @@
         left: 50%;
         transform: translate(-50%, -50%);
         padding: 2em;
-        background: white;
         border-radius: 1rem;
         display: block;
 
         &:has(&__left) {
             display: flex;
         }
+
+        &::before {
+            -webkit-backdrop-filter: blur(7.5px);
+            backdrop-filter: blur(2.5px);
+            background: var(--roulette-prizes-background);
+            border-radius: 12px;
+            content: "";
+            height: 100%;
+            left: 0;
+            position: absolute;
+            top: 0;
+            width: 100%;
+        }
+    }
+
+    &__footer {
+        position: relative;
     }
 
     header {
