--- a/src/assets/scss/utils/_settings.scss
+++ b/src/assets/scss/utils/_settings.scss
@@ -1,5 +1,5 @@
-$margin: 4px, 8px, 10px, 12px, 16px, 20px, 24px, 30px, 32px, 36px, 40px, 48px, 56px, 100px, 200px;
-$padding: 4px, 8px, 10px, 12px, 16px, 20px, 24px, 30px, 32px, 36px, 40px, 60px;
+$margin: 0px, 4px, 8px, 10px, 12px, 16px, 20px, 24px, 30px, 32px, 36px, 40px, 48px, 56px, 100px, 200px;
+$padding: 0px, 4px, 8px, 10px, 12px, 16px, 20px, 24px, 30px, 32px, 36px, 40px, 48px, 60px;
 
 $fontSizes: (
   1: (16, 24),
