--- a/src/assets/scss/globals/_utilities.scss
+++ b/src/assets/scss/globals/_utilities.scss
@@ -10,11 +10,25 @@
     @for $i from 1 through str-length($str) {
         $char: str-slice($str, $i, $i);
 
-        @if $char =="/" {
+        @if $char == "/" {
             $escaped-str: $escaped-str + "\\/";
+        } @else {
+            $escaped-str: $escaped-str + $char;
         }
+    }
 
-        @else {
+    @return $escaped-str;
+}
+
+@function escape-point($str) {
+    $escaped-str: "";
+
+    @for $i from 1 through str-length($str) {
+        $char: str-slice($str, $i, $i);
+
+        @if $char == "." {
+            $escaped-str: $escaped-str + "\\.";
+        } @else {
             $escaped-str: $escaped-str + $char;
         }
     }
@@ -30,6 +44,7 @@ $utilities: (
         "font-weight-lightest": lightest),
     "display": ("d-flex": flex,
         "d-block": block,
+        "d-none": none,
         "d-inline-block": inline-block,
         "d-grid": grid),
     "flex-direction": ("flex-row": row,
@@ -66,6 +81,79 @@ $utilities: (
         "text-left": left,
         "text-justify": justify,
         "text-right": right),
+    "min-height": (
+        "mh-100": "100%", 
+        "mh-40": "40%", 
+        "mh-50": "50%", 
+        "mh-70": "70%", 
+        "mh-80": "80%", 
+        "mh-85": "85%"
+    ),
+    "gap": (
+        "gap-0": "gap: 0px",
+        "gap-x-0": "column-gap: 0px",
+        "gap-y-0": "row-gap: 0px",
+        "gap-px": "gap: 1px",
+        "gap-x-px": "column-gap: 1px",
+        "gap-y-px": "row-gap: 1px",
+        "gap-0.5": "gap: 0.125rem",
+        "gap-x-0.5": "column-gap: 0.125rem",
+        "gap-y-0.5": "row-gap: 0.125rem",
+        "gap-1": "gap: 0.25rem",
+        "gap-x-1": "column-gap: 0.25rem",
+        "gap-y-1": "row-gap: 0.25rem",
+        "gap-1.5": "gap: 0.375rem",
+        "gap-x-1.5": "column-gap: 0.375rem",
+        "gap-y-1.5": "row-gap: 0.375rem",
+        "gap-2": "gap: 0.5rem",
+        "gap-x-2": "column-gap: 0.5rem",
+        "gap-y-2": "row-gap: 0.5rem",
+        "gap-2.5": "gap: 0.625rem",
+        "gap-x-2.5": "column-gap: 0.625rem",
+        "gap-y-2.5": "row-gap: 0.625rem",
+        "gap-3": "gap: 0.75rem",
+        "gap-x-3": "column-gap: 0.75rem",
+        "gap-y-3": "row-gap: 0.75rem",
+        "gap-3.5": "gap: 0.875rem",
+        "gap-x-3.5": "column-gap: 0.875rem",
+        "gap-y-3.5": "row-gap: 0.875rem",
+        "gap-4": "gap: 1rem",
+        "gap-x-4": "column-gap: 1rem",
+        "gap-y-4": "row-gap: 1rem",
+        "gap-5": "gap: 1.25rem",
+        "gap-x-5": "column-gap: 1.25rem",
+        "gap-y-5": "row-gap: 1.25rem",
+        "gap-6": "gap: 1.5rem",
+        "gap-x-6": "column-gap: 1.5rem",
+        "gap-y-6": "row-gap: 1.5rem",
+        "gap-7": "gap: 1.75rem",
+        "gap-x-7": "column-gap: 1.75rem",
+        "gap-y-7": "row-gap: 1.75rem",
+        "gap-8": "gap: 2rem",
+        "gap-x-8": "column-gap: 2rem",
+        "gap-y-8": "row-gap: 2rem",
+        "gap-9": "gap: 2.25rem",
+        "gap-x-9": "column-gap: 2.25rem",
+        "gap-y-9": "row-gap: 2.25rem",
+        "gap-10": "gap: 2.5rem",
+        "gap-x-10": "column-gap: 2.5rem",
+        "gap-y-10": "row-gap: 2.5rem",
+        "gap-11": "gap: 2.75rem",
+        "gap-x-11": "column-gap: 2.75rem",
+        "gap-y-11": "row-gap: 2.75rem",
+        "gap-12": "gap: 3rem",
+        "gap-x-12": "column-gap: 3rem",
+        "gap-y-12": "row-gap: 3rem",
+        "gap-14": "gap: 3.5rem",
+        "gap-x-14": "column-gap: 3.5rem",
+        "gap-y-14": "row-gap: 3.5rem",
+        "gap-16": "gap: 4rem",
+        "gap-x-16": "column-gap: 4rem",
+        "gap-y-16": "row-gap: 4rem",
+        "gap-20": "gap: 5rem",
+        "gap-x-20": "column-gap: 5rem",
+        "gap-y-20": "row-gap: 5rem",
+    ),
     "width": ("w-0": "0px",
         "w-px": "1px",
         "w-1": "0.25rem",
@@ -197,6 +285,10 @@ $utilities: (
 
         @if str-index($escaped-class, "/") {
             $escaped-class: escape-slash($escaped-class);
+        }
+
+        @if str-index($escaped-class, ".") {
+            $escaped-class: escape-point($escaped-class);
         }
 
         // Media queries para breakpoints "up"
@@ -344,26 +436,6 @@ $utilities: (
 //     width: 10% !important;
 // }
 
-.mh-100 {
-    min-height: 100%;
-}
-
-.mh-50 {
-    min-height: 50%;
-}
-
-.mh-70 {
-    min-height: 70%;
-}
-
-.mh-80 {
-    min-height: 80%;
-}
-
-.mh-85 {
-    min-height: 85%;
-}
-
 .h-25 {
     height: 25% !important;
 }
@@ -483,4 +555,20 @@ hr {
 
 .roboto {
     font-family: Roboto, sans-serif !important;
+}
+
+.tiny-image {
+    width: 150px;
+
+    @include utils.breakpoints("lg") {
+        width: 250px;
+    }
+}
+
+.logo-footer-image {
+    width: 80px;
+}
+
+.social-footer-image {
+    width: 24px;
 }
